samples/_failures_safe/1761391795_fbf435_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_807f5e91.c: In function ‘main’:
./samples/SAFE/__tmp_807f5e91.c:132:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  132 |     struct Token token
      |            ^~~~~
./samples/SAFE/__tmp_807f5e91.c:132:12: error: expected declaration or statement at end of input
